--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 						<p class="sinMargen">DOBLEMENTE ARTICULADO QUE TRANSITE EN CAMINOS Y PUENTES DE</p>
 						<p class="sinMargen">JURISDICCIÓN FEDERAL</p>
 					</div>
-<p class="derechaNegro">Autorización Número: AUT3105LACM22012025021029406</p>
+<p class="derechaNegro">Autorización Número: AUT7495MELA22092025021849284</p>
 
 					<p class="justificado">Que el permisionario denominado
-						MARTIN LARA CARO con Registro Federal de
-						Contribuyentes LACM720507GR4, se encuentra
+						ANGEL MEDINA LARA con Registro Federal de
+						Contribuyentes MELA820725AY0, se encuentra
 						debidamente registrada ante la Secretaría de Infraestructura
 						Comunicaciones y Transportes al haber acreditado que dentro de su
 						objeto social se encuentran las actividades relativas al
@@ -87,9 +87,9 @@
 
 
 					<p class="justificado">Que con fecha 22 de
-						enero de 2025 presentó
+						septiembre de 2025 presentó
 						solicitud de Autorización Expresa para circular por caminos y
-						puentes de Jurisdicción Federal, en configuración doblemente
+						puentes de Jurisdiccion Federal, en configuración doblemente
 						articulada con el vehículo que se describe a continuación, por lo
 						que previo cumplimiento de los requisitos, en ejercicio de las
 						facultades previstas en los artículos 36 fracción IX de la Ley
@@ -107,7 +107,7 @@
 						facultades de la Secretaría de Infraestructura Comunicaciones y
 						Transportes, se otorga a través de la
 						Dirección General de Autotransporte Federal, Autorización Expresa a la
-						empresa denominada, MARTIN LARA CARO para la
+						empresa denominada, ANGEL MEDINA LARA para la
 						circulación en configuración de tractocamión doblemente articulado
 						para el vehículo que se describe a continuación:</p>
 
@@ -128,16 +128,16 @@
 							<th class="borde">Calcomanía</th>
 						</tr>
 						<tr class="borde">
-							<td class="borde">GREAT DANE</td>
+							<td class="borde">WABASH NATIONAL</td>
 							<td class="borde">CAJA REFRIGERADA</td>
 							<td class="borde">SEMIRREMOLQUE DE DOS EJES</td>
-							<td class="borde">1998</td>
-							<td class="borde">1GRAA9621WW107701</td>
-							<td class="borde">424WR8</td>
+							<td class="borde">1995</td>
+							<td class="borde">1JJE482S2SL303975</td>
+							<td class="borde">048WR2</td>
 							<td class="borde"></td>
-							<td class="borde">USA</td>
+							<td class="borde">MÉXICO</td>
 							<td class="borde">2</td>
-							<td class="borde">0459476</td>
+							<td class="borde">0529612</td>
 						</tr>
 
 					</tbody></table>
@@ -175,7 +175,7 @@
 						Secretaría de Infraestructura Comunicaciones y Transportes.</p>
 
 					<p class="justificado">Cuarta. - El permisionario
-						MARTIN LARA CARO, asume la responsabilidad de
+						ANGEL MEDINA LARA, asume la responsabilidad de
 						cualquier daño que se ocasione durante el transito del vehículo
 						autorizado, a terceras personas o a sus bienes, así como a los
 						caminos, estructuras de puentes y elementos auxiliares de la
